[package]
name = "twitch-gift-farm"
version = "0.3.1"
authors = ["Chronophylos <nikolai@chronophylos.com>"]
edition = "2018"

[dependencies]
twitchchat = { version = "0.14.8", features = ["async", "smol", "async-tls"] }
ron = "0.6"
log = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
lazy_static = "1.4.0"
flexi_logger = "0.16"
directories = "3.0.1"
smol = "1.2.5"
async-compat = "0.1.4"
reqwest = { version = "0.10", default-features = false, features = ["json", "rustls-tls"] }
